# G4LBC

./: CMakeLists.txt  G4LBC.cc  readme.md
docs/SimpleStand_Geometry/: simple_stand.FCStd  simple_stand.FCStd1  simple_stand.gcode  simple_stand.stl
geometry/: aluminum_guide.stl  bosh.stl  front_cap.stl  guide.stl  plastic_guide.stl  plastic_source.stl  pmt.stl  pmt_holder.stl  pmt_window.stl  rear_cap.stl  source.stl  source_enclosure_plastic_guide.stl  source_holder_aluminum_guide.stl  source_holder_plastic.stl  source_holder_plastic_guide.stl  source_plastic_guide.stl
include/: Analysis.hh  G4LBCActionInitialization.hh  G4LBCDetectorConstruction.hh  G4LBCEventAction.hh  G4LBCHit.hh  G4LBCPhysicsList.hh  G4LBCPrimaryGeneratorAction.hh  G4LBCPrimaryGeneratorActionMR.hh  G4LBCRunAction.hh  G4LBCSensitiveDetector.hh  G4LBCStackingAction.hh
macro/analysis/: compare.cc  efficiency.cc  join_thread.cc  smeared_spectra.cc  spectra.cc
macro/examples/: am241.mac  ba133.mac  co60.mac  cs137.mac  eu152.mac  gamma.mac  geantino.mac  na22.mac
macro/vis/: initialize_visualization.mac
src/: G4LBCActionInitialization.cc  G4LBCDetectorConstruction.cc  G4LBCEvent.cc  G4LBCHit.cc  G4LBCPhysicsList.cc  G4LBCPrimaryGeneratorAction.cc  G4LBCPrimaryGeneratorActionMR.cc  G4LBCSensitiveDetector.cc  G4LBCStackingAction.cc  G4RunAction.cc
